fix: correct spacing in CSS variable definitions and update UploadArea class for better responsiveness

--- a/src/app.css
+++ b/src/app.css
@@ -69,7 +69,7 @@
   --sidebar-border: var(--border);
   --sidebar-ring: var(--ring);
 
-  --noise-bg:url(/light-noise.svg),linear-gradient(hsl(40, 30%, 96%),hsl(40, 30%, 96%));
+  --noise-bg: url(/light-noise.svg), linear-gradient(hsl(40, 30%, 96%), hsl(40, 30%, 96%));
 
   --text-primary: hsl(0deg 0% 96.08%);
   --text-secondary: hsl(0deg 0% 9.8%);
@@ -144,9 +144,9 @@
 
   --accent: hsl(240 3.7% 15.9%);
   --accent-foreground: hsl(0, 0%, 61%);
-  --destructive: hsl(0 62.8% 30.6%);
-  --destructive-foreground: hsl(0deg 0% 92.16%);
-  --noise-bg:url(/dark-noise.png),linear-gradient(#393737,#1b1b1b);
+  --destructive: oklch(0.704 0.191 22.216);
+  --destructive-foreground: oklch(0.985 0 0);
+  --noise-bg: url(/dark-noise.png), linear-gradient(#393737, #1b1b1b);
 
 
   /* proposed */
